--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -26,7 +26,7 @@ jobs:
       #     diff_files=git diff --name-only -G ${target_str} HEAD origin/${base_branch} -- ${diff_path} | tr "\n" " "
       - name: Display file name if it contains hoge #差分内に${target_str} を含む場合に、プルリクにコメントし却下する。
         run: |
-          diff_files=git diff --name-only -G ${target_str} HEAD origin/${base_branch} -- ${diff_path} | tr "\n" " "
+          diff_files=`git diff --name-only -G ${target_str} HEAD origin/${base_branch} -- ${diff_path} | tr "\n" " "`
           gh pr comment -b "debug-git_diff,$(git diff --name-only -G ${target_str} HEAD origin/${base_branch} -- ${diff_path})" ${{github.event.pull_request.html_url }}
           gh pr comment -b "debug-diff_files,$(echo ${diff_files})" ${{github.event.pull_request.html_url }}
           gh pr comment -b "debug-grep,$(grep ${target_str} ${diff_files})" ${{github.event.pull_request.html_url }}
