--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -27,11 +27,8 @@ jobs:
       - name: Display file name if it contains hoge #差分内に${target_str} を含む場合に、プルリクにコメントし却下する。
         run: |
           diff_files=`git diff --name-only -G ${target_str} HEAD origin/${base_branch} -- ${diff_path} | tr "\n" " "`
-          gh pr comment -b "debug-git_diff,$(git diff --name-only -G ${target_str} HEAD origin/${base_branch} -- ${diff_path})" ${{github.event.pull_request.html_url }}
-          gh pr comment -b "debug-diff_files,$(echo ${diff_files})" ${{github.event.pull_request.html_url }}
-          gh pr comment -b "debug-grep,$(grep ${target_str} ${diff_files})" ${{github.event.pull_request.html_url }}
-          if  grep ${target_str} ${diff_files}; then
+          if grep ${target_str} ${diff_files}; then
             gh pr comment -b "$(grep ${target_str} ${diff_files})" ${{github.event.pull_request.html_url }}
-            gh pr close ${{github.event.pull_request.html_url }}
+            exit 1
             echo "contains ${target_str}"
           fi
