--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -3,7 +3,7 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
     branches: [ main ]
-    # paths: 'code/**' #チェックするディレクトリと拡張子の指定
+    paths: 'code/**' #チェックするディレクトリと拡張子の指定
 env:
   base_branch: "main"
   diff_path: "code/**"
