--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -19,8 +19,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-      - name: Fetch base branch
-        run: git fetch origin ${base_branch}:${base_branch}
+      # - name: Fetch base branch
+      #   run: git fetch origin ${base_branch}:${base_branch}
       # - name: Run actions using diff_files #変更のあるファイルを抽出する。
       #   run: |
       #     diff_files=`git diff --name-only -G ${target_str} HEAD origin/${base_branch} -- ${diff_path} | tr "\n" " "`
@@ -28,7 +28,7 @@ jobs:
         run: |
           diff_files=`git diff --name-only -G ${target_str} HEAD origin/${base_branch} -- ${diff_path} | tr "\n" " "`
           if grep ${target_str} ${diff_files}; then
-            gh pr comment -b "$(grep ${target_str} ${diff_files})" ${{github.event.pull_request.html_url }}
+            gh pr comment -b "${diff_files}で${target_str}を検知しました。\n $(grep ${target_str} ${diff_files})" ${{github.event.pull_request.html_url }}
             exit 1
             echo "contains ${target_str}"
           fi
