--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -9,7 +9,7 @@ env:
   diff_path: "code/**"
   target_str: "hoge"
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} #トークンの宣言。必要
-  URL: ${{ github.event.pull_request.html_url }} #プルリクのURL。参照していないが、消すと動かない？
+  # URL: ${{ github.event.pull_request.html_url }} #プルリクのURL。参照していないが、消すと動かない？
 jobs:
   build:  # job id
     name:  Find unauthorized strings # job 名
