--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -9,7 +9,7 @@ env:
   base_branch: "main"
   diff_path: "code/**"
   target_str: "hoge"
-  # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} #トークンの宣言。必要
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} #トークンの宣言。必要
   # URL: ${{ github.event.pull_request.html_url }} #プルリクのURL。参照していないが、消すと動かない？
 jobs:
   build:  # job id
