--- a/.github/workflows/branch_pr_rule.yaml
+++ b/.github/workflows/branch_pr_rule.yaml
@@ -1,3 +1,29 @@
+name: branch_checker             # workflow 名
+on:
+  pull_request:
+    types: [opened, synchronize, reopened]
+    branches: [ main ]
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} #トークンの宣言。必要
+  # URL: ${{ github.event.pull_request.html_url }} #プルリクのURL。参照していないが、消すと動かない？
+jobs:
+  build:  # job id
+    name:  Check branch # job 名
+    runs-on: ubuntu-latest # 仮想環境指定（Windows Server, Ubuntu, Mac OSをサポートする）
+    steps:
+      - name: Switch to pull request branch
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      - name: Check branch #差分内に${target_str} を含む場合に、プルリクにコメントし異常終了する。
+        run: |
+          echo ${{ github.head_ref }}
+          gh pr comment -b "${{ github.head_ref }}"
+          if [ "${{ github.head_ref }}" = "dev" ] then;
+            exit 1
+          fi
+
+
 name: pr_checker             # workflow 名
 on:
   pull_request:
