--- a/.github/workflows/branch_pr_rule.yaml
+++ b/.github/workflows/branch_pr_rule.yaml
@@ -11,14 +11,14 @@ jobs:
     name:  Check branch # job 名
     runs-on: ubuntu-latest # 仮想環境指定（Windows Server, Ubuntu, Mac OSをサポートする）
     steps:
-      - name: Switch to pull request branch
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.event.pull_request.head.sha }}
+      # - name: Switch to pull request branch
+      #   uses: actions/checkout@v3
+      #   with:
+      #     ref: ${{ github.event.pull_request.head.sha }}
       - name: Check branch 
         run: |
-          echo ${{ github.event.pull_request.head }}
-          gh pr comment -b "${{ github.event.pull_request.head }}"
-          if [ "${{ github.event.pull_request.head }}" = "dev" ] then;
+          echo ${{ github.head_ref }}
+          gh pr comment -b "${{ github.head_ref }}"
+          if [ "${{ github.head_ref }}" = "dev" ] then;
             exit 1
           fi
