--- a/.github/workflows/branch_pr_rule.yaml
+++ b/.github/workflows/branch_pr_rule.yaml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} #トークンの宣言。必要
-  # URL: ${{ github.event.pull_request.html_url }} #プルリクのURL。参照していないが、消すと動かない？
+  URL: ${{ github.event.pull_request.html_url }} #プルリクのURL。参照していないが、消すと動かない？
 jobs:
   build:  # job id
     name:  Check branch # job 名
